add new animation set: DropIn

--- a/tuesday.less
+++ b/tuesday.less
@@ -4,6 +4,7 @@
 /* ==================================== */
 
 @easeOutCirc: cubic-bezier(0, 0.590, 0.375, 1);
+@easeInCirc: cubic-bezier(0.590, 0, 1, 0.375);
 
 .animated {
 	animation-duration: 0.3s;
@@ -199,4 +200,69 @@
 
 .shakrHingeFlipOut {
 	animation-name: shakrHingeFlipOut;
+}
+
+
+/* Drop In */
+@keyframes shakrDropInLeft {
+	0% { 
+		opacity: 1;
+		transform: rotate(2deg) translateY(-15px);
+		transform-origin: right bottom;
+		animation-timing-function: ease-in;
+	}
+
+	50% {
+		opacity: 1;
+		transform: rotate(0) translateY(0px);
+		transform-origin: right bottom;
+		animation-timing-function: ease-out;
+	}
+
+	75% {
+		transform: rotate(-0.5deg) translateY(0px);
+		transform-origin: left bottom;
+		animation-timing-function: @easeInCirc;
+	}
+	100% { 
+		opacity: 1;
+		transform: rotate(0) translateY(0px);
+		transform-origin: center bottom;
+		animation-timing-function: @easeOutCirc;
+	}
+}
+
+@keyframes shakrDropInRight {
+	0% { 
+		opacity: 1;
+		transform: rotate(-2deg) translateY(-15px);
+		transform-origin: left bottom;
+		animation-timing-function: ease-in;
+	}
+
+	50% {
+		opacity: 1;
+		transform: rotate(0) translateY(0px);
+		transform-origin: left bottom;
+		animation-timing-function: ease-out;
+	}
+
+	75% {
+		transform: rotate(0.5deg) translateY(0px);
+		transform-origin: right bottom;
+		animation-timing-function: @easeInCirc;
+	}
+	100% { 
+		opacity: 1;
+		transform: rotate(0) translateY(0px);
+		transform-origin: center bottom;
+		animation-timing-function: @easeOutCirc;
+	}
+}
+
+.shakrDropInLeft {
+	animation-name: shakrDropInLeft;
+}
+.shakrDropInRight {
+	animation-name: shakrDropInRight;
 }
