--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,52 @@
-@import url('http://fonts.googleapis.com/css?family=Raleway:400,700');
-html,
+@import url('http://fonts.googleapis.com/css?family=Lato:400,900italic,700');
+.font-default {
+  font-family: 'Lato', 'Helvetica Neue', 'Helvetica', sans-serif;
+}
+input,
+select,
+button,
+textarea {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  font-family: 'Lato', 'Helvetica Neue', 'Helvetica', sans-serif;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
+}
+html {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  font-size: 85%;
+}
 body {
   margin: 0;
   padding: 0;
   width: 100%;
-}
-body {
-  width: 100%;
   height: 100%;
-  font-family: 'Raleway', 'Helvetica Neue', 'Helvetica', sans-serif;
-  font-size: 85%;
+  font-family: 'Lato', 'Helvetica Neue', 'Helvetica', sans-serif;
 }
+/* main style start */
 #page {
   width: 100%;
   text-align: center;
   position: relative;
   padding: 20px 0;
+}
+h1 {
+  font-size: 4em;
+  font-weight: 900;
+  margin: 20px 0;
+  font-style: italic;
+}
+h2 {
+  margin: 0 0 15px 0;
 }
 .container {
   position: relative;
@@ -23,30 +54,61 @@ body {
   width: 420px;
   height: 240px;
   padding: 20px 30px 40px 30px;
-  margin: 0 auto;
+  margin: 0 auto 10px auto;
   text-align: center;
-  border: 1px solid #999;
-}
-.container h3 {
-  margin: 0 0 10px 0;
+  border: 1px solid #ddd;
 }
 .button-row {
-  width: 400px;
+  width: 100%;
   height: 50px;
   margin: 0 auto;
   text-align: center;
 }
-.button {
+select.animationlist {
+  width: 200px;
   display: inline-block;
-  width: 120px;
-  font-size: 0.9rem;
+  height: 40px;
+  padding: 10px 15px;
+  margin: 0 5px 0 0;
+  background: url('../images/arrow-down.svg') no-repeat right center;
+  border: none;
+  box-shadow: 0 0 0 1px #aaa inset;
   line-height: 22px;
-  font-weight: bold;
-  text-align: center;
+  vertical-align: top;
+  font-size: 1rem;
+}
+select.animationlist:focus {
+  box-shadow: 0 0 0 2px #b2cf65 inset;
+  text-decoration: none;
+  outline: none;
+}
+select.animationlist optgroup {
+  font-family: 'Lato', 'Helvetica Neue', 'Helvetica', sans-serif;
+  padding: 5px 0;
+  text-indent: 5px;
+  border-bottom: 1px solid #aaa;
+}
+select.animationlist optgroup:last-child {
+  border: none;
+}
+select.animationlist option {
+  font-family: 'Lato', 'Helvetica Neue', 'Helvetica', sans-serif;
+  padding: 5px;
+  text-indent: 12px;
+}
+button {
+  display: inline-block;
+  vertical-align: top;
+  width: 150px;
+  height: 40px;
   padding: 6px 15px;
   margin: 0 5px 10px 0;
   border: none;
-  background: #1f87ba;
+  background: #9fc33e;
+  font-size: 1rem;
+  font-weight: bold;
+  line-height: 22px;
+  text-align: center;
   color: #fff;
   text-decoration: none;
   cursor: pointer;
@@ -57,46 +119,34 @@ body {
   transition: 0.2s background, 0.2s box-shadow;
   white-space: pre;
 }
-.button:hover {
+button:hover {
   text-decoration: none;
   box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.5) inset;
-  background-color: #30a4dc;
+  background-color: #b2cf65;
   color: #fff;
 }
-.button:active {
+button:active {
   text-decoration: none;
-  background-color: #18688e;
+  background-color: #9fc33e;
   color: #fff;
   box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.3) inset;
 }
-.button:focus {
+button:focus {
   text-decoration: none;
   outline: none;
   color: #fff;
 }
-.button span.toggletext {
-  display: block;
-}
-.button span.animatingtext {
-  display: none;
-}
-.button.disabled {
+button.disabled {
   background: #666;
   color: #aaa;
   pointer-events: none;
 }
-.button.disabled:hover,
-.button.disabled:active,
-.button.disabled:focus {
+button.disabled:hover,
+button.disabled:active,
+button.disabled:focus {
   background: #666;
   box-shadow: none;
   border: none;
-}
-.button.disabled span.toggletext {
-  display: none;
-}
-.button.disabled span.animatingtext {
-  display: block;
 }
 .target {
   position: absolute;
@@ -108,26 +158,27 @@ body {
   border-radius: 3px;
   margin: 0;
   text-align: center;
+  font-size: 1rem;
   color: #333;
 }
 .guide {
   position: absolute;
-  opacity: 0.2;
   bottom: 20px;
   background: #eee;
-  border: 1px solid red;
   width: 400px;
   height: 100px;
   padding: 10px;
   border-radius: 3px;
   margin: 0;
   text-align: center;
+  font-size: 1rem;
   color: #333;
+  opacity: 0.2;
+  border: 1px solid red;
 }
 .hidden {
   display: none;
 }
-/* common properties */
 .container.entrances .target {
   opacity: 0;
 }
