--- a/css/style.css
+++ b/css/style.css
@@ -15,14 +15,23 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+p {
   margin: 0;
   padding: 0;
+}
+a {
+  color: #9fc33e;
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
 }
 html {
   margin: 0;
   padding: 0;
   width: 100%;
+  height: 100%;
   font-size: 85%;
 }
 body {
@@ -31,6 +40,7 @@ body {
   width: 100%;
   height: 100%;
   font-family: 'Lato', 'Helvetica Neue', 'Helvetica', sans-serif;
+  display: table;
 }
 /* main style start */
 #page {
@@ -38,11 +48,13 @@ body {
   text-align: center;
   position: relative;
   padding: 20px 0;
+  vertical-align: middle;
+  display: table-cell;
 }
 h1 {
   font-size: 4em;
   font-weight: 900;
-  margin: 20px 0;
+  margin: 30px 0;
   font-style: italic;
 }
 h2 {
@@ -51,7 +63,7 @@ h2 {
 .container {
   position: relative;
   display: inline-block;
-  width: 420px;
+  width: 400px;
   height: 240px;
   padding: 20px 30px 40px 30px;
   margin: 0 auto 10px auto;
@@ -127,7 +139,7 @@ button:hover {
 }
 button:active {
   text-decoration: none;
-  background-color: #9fc33e;
+  background-color: #7f9d31;
   color: #fff;
   box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.3) inset;
 }
@@ -137,8 +149,8 @@ button:focus {
   color: #fff;
 }
 button.disabled {
-  background: #666;
-  color: #aaa;
+  background: #aaa;
+  color: #fff;
   pointer-events: none;
 }
 button.disabled:hover,
@@ -150,11 +162,12 @@ button.disabled:focus {
 }
 .target {
   position: absolute;
-  bottom: 20px;
+  bottom: 50px;
   background: #eee;
   width: 400px;
   height: 100px;
-  padding: 10px;
+  box-sizing: border-box;
+  padding: 15px 20px;
   border-radius: 3px;
   margin: 0;
   text-align: center;
@@ -163,11 +176,12 @@ button.disabled:focus {
 }
 .guide {
   position: absolute;
-  bottom: 20px;
+  bottom: 50px;
   background: #eee;
   width: 400px;
   height: 100px;
-  padding: 10px;
+  box-sizing: border-box;
+  padding: 15px 20px;
   border-radius: 3px;
   margin: 0;
   text-align: center;
@@ -178,6 +192,18 @@ button.disabled:focus {
 }
 .hidden {
   display: none;
+}
+.credits {
+  color: #999;
+  margin: 10px 0;
+}
+.credits .shakr-logo {
+  display: block;
+  width: 48px;
+  height: 48px;
+  margin: 0 auto;
+  background: url('../images/shakr-feathers.svg') no-repeat center center;
+  background-size: 48px 48px;
 }
 .container.entrances .target {
   opacity: 0;
