--- a/style.less
+++ b/style.less
@@ -116,6 +116,7 @@ select.animationlist {
 	line-height: 22px;
 	vertical-align: top;
 	font-size: 1rem;
+	border-radius: 0;
 
 	&:focus {
 		box-shadow: 0 0 0 2px @green inset;
