--- a/css/style.css
+++ b/css/style.css
@@ -56,8 +56,7 @@ h1 {
   font-weight: 900;
   margin: 30px 0 0 0;
   font-style: italic;
-  -webkit-animation-duration: 0.5s !important;
-          animation-duration: 0.5s !important;
+  animation-duration: 0.5s !important;
 }
 p.subheader {
   font-size: 1.2rem;
@@ -136,8 +135,7 @@ button {
   letter-spacing: 2px;
   box-shadow: 0 0 0 2px rgba(255, 255, 255, 0) inset;
   border-radius: 0;
-  -webkit-transition: 0.2s background, 0.2s box-shadow;
-          transition: 0.2s background, 0.2s box-shadow;
+  transition: 0.2s background, 0.2s box-shadow;
   white-space: pre;
 }
 button:hover {
@@ -175,8 +173,7 @@ button.disabled:focus {
   background: #eee;
   width: 400px;
   height: 100px;
-  -moz-box-sizing: border-box;
-       box-sizing: border-box;
+  box-sizing: border-box;
   padding: 15px 20px;
   border-radius: 3px;
   margin: 0;
@@ -190,8 +187,7 @@ button.disabled:focus {
   background: #eee;
   width: 400px;
   height: 100px;
-  -moz-box-sizing: border-box;
-       box-sizing: border-box;
+  box-sizing: border-box;
   padding: 15px 20px;
   border-radius: 3px;
   margin: 0;
@@ -225,4 +221,40 @@ button.disabled:focus {
 /* set animations */
 .guide {
   display: none !important;
+}
+@media screen and (max-width: 460px) {
+  html {
+    font-size: 70%;
+  }
+  h1 {
+    font-size: 4em;
+  }
+  p.subheader {
+    padding: 0 10px;
+  }
+  .container {
+    width: 100%;
+    height: 230px;
+    display: block;
+    box-sizing: border-box;
+    padding: 20px 20px;
+    border: none;
+    border-top: 1px solid #ddd;
+  }
+  .container.exits {
+    border-bottom: 1px solid #ddd;
+  }
+  select.animationlist {
+    width: 150px;
+  }
+  button {
+    width: 120px;
+    margin: 0;
+  }
+  .target {
+    width: calc(100% - 40px);
+    left: inherit;
+    height: auto;
+    bottom: 10px;
+  }
 }
