--- a/style.less
+++ b/style.less
@@ -256,3 +256,42 @@ button {
 	 display: none !important;
 }
 
+
+@media screen and (max-width: 460px) {
+	html {
+		font-size: 70%;
+	}
+	h1 {
+		font-size: 4em;
+	}
+
+	p.subheader {
+		padding: 0 10px;
+	}
+	.container {
+		width: 100%;
+		height: 230px;
+		display: block;
+		box-sizing: border-box;
+		padding: 20px 20px;
+		border: none;
+		border-top: 1px solid #ddd;
+
+		&.exits {
+			border-bottom: 1px solid #ddd;
+		}
+	}
+	select.animationlist {
+		width: 150px;
+	}
+	button {
+		width: 120px;
+		margin: 0;
+	}
+	.target {
+		width: ~'calc(100% - 40px)';
+		left: inherit;
+		height: auto;
+		bottom: 10px;
+	}
+}
