--- a/tuesday.less
+++ b/tuesday.less
@@ -205,7 +205,10 @@
 
 /* Drop In */
 @keyframes tdDropInLeft {
-	0% { 
+	0% {
+		opacity: 0;
+	}
+	1% { 
 		opacity: 1;
 		transform: rotate(2deg) translateY(-15px);
 		transform-origin: right bottom;
@@ -233,7 +236,10 @@
 }
 
 @keyframes tdDropInRight {
-	0% { 
+	0% {
+		opacity: 0;
+	}
+	1% { 
 		opacity: 1;
 		transform: rotate(-2deg) translateY(-15px);
 		transform-origin: left bottom;
