--- a/style.less
+++ b/style.less
@@ -1,5 +1,5 @@
+/* stylesheet for tuesday demo page */
 @import url('http://fonts.googleapis.com/css?family=Lato:400,900italic,700');
-
 
 @red: #f05a67;
 @red-l1: #f69c97;
@@ -17,12 +17,6 @@
 @green-d1: darken(@green,10%);
 @green-d2: darken(@green,10%);
 @green-d3: darken(@green,20%);
-
-@yellow: #ecd05d;
-@yellow-l1: lighten(@yellow,10%);
-@yellow-l2: lighten(@yellow,20%);
-@yellow-d1: darken(@yellow,10%);
-@yellow-d2: darken(@yellow,20%);
 
 .font-default { 
 	font-family: 'Lato', 'Helvetica Neue', 'Helvetica', sans-serif; 
